--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,12 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+:root {
+  --vv-primary: var(--bulma-primary);
+  --vv-link-text: var(--bulma-link-text);
+}
+
+.vv-bulma-loading-bridge {
+  --bulma-loading-color: var(--vv-loading-color, var(--vv-primary));
+}
