--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
 :root {
   --vv-primary: var(--bulma-primary);
   --vv-link-text: var(--bulma-link-text);
+  --vv-radius: var(--bulma-radius);
 }
 
 .vv-bulma-loading-bridge {
