--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@
   --vv-primary: var(--bulma-primary);
   --vv-link-text: var(--bulma-link-text);
   --vv-radius: var(--bulma-radius);
+  --vv-navbar-height: var(--bulma-navbar-height);
 }
 
 .vv-bulma-loading-bridge {
