--- a/src/pages/product/[characterId].astro
+++ b/src/pages/product/[characterId].astro
@@ -74,15 +74,14 @@ const description = buildDescription(characterInfo);
   @use "@/styles/vars.scss" as *;
   @use "@/styles/helper.scss" as *;
 
-  @use "bulma/sass/elements" as *;
-  @use "bulma/sass/utilities/initial-variables" as *;
-  @use "bulma/sass/utilities/mixins" as *;
-  @use "bulma/sass/helpers" as *;
-
   .product {
     .feature {
-      @extend .my-5, .py-5;
-      @include mobile {
+      margin-top: 1.5rem !important;
+      margin-bottom: 1.5rem !important;
+      padding-top: 1.5rem !important;
+      padding-bottom: 1.5rem !important;
+
+      @media screen and (max-width: 768px) {
         margin-top: 0 !important;
         margin-bottom: 0 !important;
       }
@@ -117,9 +116,9 @@ const description = buildDescription(characterInfo);
         width: 100%;
         display: flex;
         justify-content: space-evenly;
-        @extend .mt-6;
+        margin-top: 3rem !important;
 
-        @include mobile {
+        @media screen and (max-width: 768px) {
           flex-direction: column;
           gap: 2rem;
         }
@@ -127,8 +126,9 @@ const description = buildDescription(characterInfo);
         .thumb {
           width: 50%;
           border: 1.5px solid;
-          @extend .ml-6;
-          @include mobile {
+          margin-left: 3rem !important;
+
+          @media screen and (max-width: 768px) {
             width: 100%;
             margin-left: 0 !important;
           }
@@ -139,7 +139,7 @@ const description = buildDescription(characterInfo);
           display: flex;
           justify-content: center;
           align-items: center;
-          @include mobile {
+          @media screen and (max-width: 768px) {
             width: 100%;
           }
         }
