--- a/src/pages/nemo/index.astro
+++ b/src/pages/nemo/index.astro
@@ -48,7 +48,7 @@ const voicevoxIconImageUrl = `url(${(await getImage({ src: voicevoxIconImage }))
           <div class="buttons">
             <button
               {...{ [showNemoGuidanceModalAttr]: "" }}
-              class="button is-primary is-rounded"
+              class="button is-primary is-rounded is-medium is-responsive"
             >
               <span class="icon">
                 <FontAwesomeIcon icon={faDownload} />
@@ -57,30 +57,30 @@ const voicevoxIconImageUrl = `url(${(await getImage({ src: voicevoxIconImage }))
             </button>
             <button
               {...{ [showNemoTermModalAttr]: "" }}
-              class="button is-normal is-rounded is-white"
+              class="button is-normal is-rounded is-white is-medium is-responsive"
             >
               <span>利用規約</span>
             </button>
           </div>
         </div>
       </div>
-      <div class="feature container is-max-widescreen">
-        <div class="feature-cell">
+      <div class="feature container is-max-widescreen mb-6 pb-6">
+        <div class="feature-cell is-size-5 is-size-6-mobile">
           商用利用・非商用利用
           <br />
           問わず無料
         </div>
-        <div class="feature-cell">
+        <div class="feature-cell is-size-5 is-size-6-mobile">
           マルチOSに対応
           <br />
           (Win / Mac / Linux)
         </div>
-        <div class="feature-cell">
+        <div class="feature-cell is-size-5 is-size-6-mobile">
           簡単に使える
           <br />
           わかりやすい操作画面
         </div>
-        <div class="feature-cell">
+        <div class="feature-cell is-size-5 is-size-6-mobile">
           イントネーションの
           <br />
           詳細な調整も可能
@@ -97,7 +97,7 @@ const voicevoxIconImageUrl = `url(${(await getImage({ src: voicevoxIconImage }))
     </section>
 
     <section class="section py-0">
-      <div class="speakers-container container is-max-desktop">
+      <div class="speakers-container container is-max-desktop mt-6 pt-6">
         {
           // 内部で表示するドロップメニューが兄弟要素で隠れてしまうのでz-indexを指定している
           speakerKeys.map((key, i) => (
@@ -108,7 +108,7 @@ const voicevoxIconImageUrl = `url(${(await getImage({ src: voicevoxIconImage }))
           ))
         }
       </div>
-      <div class="speaker-contact-explain container is-max-desktop">
+      <div class="speaker-contact-explain container is-max-desktop my-6 pb-6 is-size-5">
         より柔軟な演技や高品質な音声をお求めの場合は、
         <br />
         上記のリンク先にてご本人へご依頼いただけます。
@@ -130,8 +130,6 @@ VOICEVOXの音声合成をアプリケーションやサービスに組み込め
   is:global
 >
   @use "@/styles/helper.scss" as *;
-  @use "bulma/sass/utilities/initial-variables" as *;
-  @use "bulma/sass/utilities/mixins" as *;
 
   .nemo {
     color: white;
@@ -152,7 +150,7 @@ VOICEVOXの音声合成をアプリケーションやサービスに組み込め
       justify-content: center;
       gap: 3rem;
 
-      @include touch {
+      @media screen and (max-width: 1023px) {
         height: auto;
         flex-direction: column-reverse;
         align-items: center;
@@ -168,30 +166,20 @@ VOICEVOXの音声合成をアプリケーションやサービスに組み込め
         justify-content: center;
         align-content: start;
 
-        @include touch {
+        @media screen and (max-width: 1023px) {
           align-items: center;
           text-align: center;
         }
 
         h1 {
-          @extend .is-size-3-touch;
-          @extend .is-size-2-desktop;
-          @extend .is-size-1-widescreen;
+          font-size: 2rem;
         }
         h2 {
-          @extend .is-size-4-touch;
-          @extend .is-size-4-desktop;
-          @extend .is-size-3-widescreen;
-        }
-        .buttons {
-          * {
-            @extend .is-medium;
-            @extend .is-responsive;
-          }
+          font-size: 1.5rem;
         }
 
         .powered-by {
-          @extend .mb-1;
+          margin-bottom: 0.25rem !important;
 
           &::before {
             content: "";
@@ -221,21 +209,17 @@ VOICEVOXの音声合成をアプリケーションやサービスに組み込め
     }
 
     .feature {
-      @extend .mb-6, .pb-6;
-
       width: 100%;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
       gap: 1rem;
 
-      @include touch {
+      @media screen and (max-width: 1023px) {
         grid-template-columns: repeat(2, 1fr);
       }
 
       .feature-cell {
         background-color: #21212139;
-        @extend .is-size-5;
-        @extend .is-size-6-mobile;
         text-align: center;
         padding: 2rem 0;
         border-radius: 1rem;
@@ -243,28 +227,21 @@ VOICEVOXの音声合成をアプリケーションやサービスに組み込め
     }
 
     .explain {
-      @extend .my-6, .py-6;
-      @include desktop {
-        font-size: $size-3;
-      }
-      @include tablet-only {
-        font-size: $size-4;
-      }
-      @include mobile {
-        font-size: $size-5;
-      }
+      margin-top: 3rem !important;
+      margin-bottom: 3rem !important;
+      padding-top: 3rem !important;
+      padding-bottom: 3rem !important;
+      font-size: 1.5rem;
       text-align: center;
     }
 
     .speakers-container {
-      @extend .mt-6, .pt-6;
-
       display: grid;
-      gap: $gap;
+      gap: 32px;
       grid-template-columns: repeat(2, 1fr);
       place-content: center;
 
-      @include mobile {
+      @media screen and (max-width: 768px) {
         grid-template-columns: repeat(1, minmax(0, 25rem));
       }
 
@@ -281,10 +258,10 @@ VOICEVOXの音声合成をアプリケーションやサービスに組み込め
         }
 
         --height: 8rem;
-        @include touch {
+        @media screen and (max-width: 1023px) {
           --height: 6rem;
         }
-        @include mobile {
+        @media screen and (max-width: 768px) {
           --height: 4rem;
         }
 
@@ -318,25 +295,22 @@ VOICEVOXの音声合成をアプリケーションやサービスに組み込め
           text-align: center;
           gap: 0.5rem;
 
-          @include touch {
+          @media screen and (max-width: 1023px) {
             gap: 0.25rem;
           }
 
           .cv {
-            @extend .is-size-7;
-            @extend .is-size-6-desktop;
+            font-size: 0.75rem;
           }
           h3 {
-            @extend .is-size-5-desktop;
+            font-size: 1.25rem;
           }
 
           .dropdown {
             .dropdown-trigger {
               .button {
-                @extend .is-ghost;
                 color: white;
                 text-decoration: underline;
-                @extend .py-0;
                 height: auto;
                 &:active,
                 &:focus,
@@ -347,24 +321,11 @@ VOICEVOXの音声合成をアプリケーションやサービスに組み込め
             }
 
             .dropdown-content {
-              @extend .has-background-dark;
-
               .dropdown-item {
                 display: flex;
                 flex-direction: column;
                 text-align: center;
                 align-items: center;
-
-                @extend .has-text-white;
-
-                .button {
-                  @extend .circle-icon;
-                  @extend .ml-auto;
-                  @extend .is-dark;
-                  @extend .is-medium;
-                  @extend .has-text-white;
-                  @extend .mb-0;
-                }
               }
             }
           }
@@ -383,9 +344,45 @@ VOICEVOXの音声合成をアプリケーションやサービスに組み込め
     }
 
     .speaker-contact-explain {
-      @extend .my-6, .pb-6;
-      @extend .is-size-5;
       text-align: center;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .nemo .explain {
+      font-size: 1.25rem;
+    }
+  }
+
+  @media screen and (min-width: 769px) and (max-width: 1023px) {
+    .nemo .explain {
+      font-size: 1.5rem;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    .nemo .explain {
+      font-size: 2rem;
+    }
+
+    .nemo .speaker-labels .cv {
+      font-size: 1rem;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    .nemo .top .description h1 {
+      font-size: 2.5rem;
+    }
+  }
+
+  @media screen and (min-width: 1216px) {
+    .nemo .top .description h1 {
+      font-size: 3rem;
+    }
+
+    .nemo .top .description h2 {
+      font-size: 2rem;
     }
   }
 </style>
